wordpress/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: 121397407795.dkr.ecr.ap-northeast-2.amazonaws.com/docker-wordpress:latest
          imagePullPolicy: Always
          name: wordpress
          ports:
            - containerPort: 80
